--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,11 @@
-[build.environment]
-  NPM_VERSION = "6.13.4"
-
 [build]
-  command = "npm run build"
-  publish = "dist"
+publish = "public"
+command = "hugo --gc --minify"
 
-[context.deploy-preview]
-  command = "npm run build:preview"
+[context.production.environment]
+HUGO_VERSION = "0.105.0"
+HUGO_ENV = "production"
+HUGO_ENABLEGITINFO = "true"
 
-[dev]
-  command = "npm run start"
-  targetPort = 8888
+[context.branch-deploy.environment]
+HUGO_VERSION = "0.105.0"
